Update version + bug fixes + fixed /ibr reload + fixed /ibr messages